# IRI

./: .gitignore  README.md
indices/: readme.md
iri-1990/: CMakeLists.txt
iri-1990/src/: CMakeLists.txt
iri-1995/: CMakeLists.txt
iri-1995/src/: CMakeLists.txt  cira86.for  iri_test.for  irif13.for  iris13.for  irit13.for
iri-2001/: 00_iri2001_readme.txt  CMakeLists.txt  readme.md
iri-2001/src/: 00_iri2001_license.txt  CMakeLists.txt  cira.for  igrf.for  iridreg.for  irifun.for  irisub.for  iritec.for  iritest.for
iri-2007/: 00readme.txt  CMakeLists.txt  output.txt
iri-2007/src/: CMakeLists.txt  cira.for  igrf.for  iridreg.for  irifun.for  irisub.for  iritec.for  iritest.for
iri-2007/src/IMAZ/: imaztest.for  iri_imaz.for
iri-2007/src/Te-plasmasphere-akebono/: akebono_te.for
iri-2012/: CMakeLists.txt  readme.md
iri-2012/src/: 00_iri2012_readme.txt  00_iri2012_update_history.txt  CMakeLists.txt  cira.for  igrf.for  iriflip.for  irifun.for  iriorbit.for  iriorbitmax.for  irisub.for  iritec.for  iritest.for
iri-2016/: CMakeLists.txt
iri-2016/src/: 00readme.txt  CMakeLists.txt  cira.for  igrf.for  iriflip.for  irifun.for  irirtam-test.for  irirtam.for  irisub.for  iritec.for  iritest.for
originals/: 00_iri2001.tar  00_iri2007.tar  00_iri2012.tar  00_iri2016.tar  modelweb-iri-1990.tar  modelweb-iri-1995.tar  modelweb-iri-2001.tar  modelweb-iri-2007.tar  readme.md
